// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cta given api return a single item should render cta 1`] = `
<body>
  <div>
    <div
      class="cta"
    >
      <a
        href="https://aitellmeastory.clydedsouza.net"
        rel="noreferrer"
        target="_blank"
      >
        Purchase my book AI, Tell Me a Story from these platforms.
      </a>
    </div>
  </div>
</body>
`;

exports[`Cta given api returns an error should render empty cta 1`] = `
<body>
  <div>
    <p>
      Couldn‘t load the data at this stage
    </p>
  </div>
</body>
`;

exports[`Cta given api returns no items should render empty cta 1`] = `
<body>
  <div>
    <p>
      Couldn‘t load the data at this stage
    </p>
  </div>
</body>
`;
